frontend/css/inc/gallery.sass
.gallery-spread
    margin-bottom: 2rem

    &.card .row
        margin: 8px

    .spread-component
        padding: 8px

    .spread-component .t-expand-click-target
        cursor: pointer

    .spread-component.flex-push-bottom
        display: flex
        align-items: flex-end
    
    .spread-component .icon
        font-size: 1rem
    
    .spread-image-backing
        position: relative
        background-size: cover
        display: block
        font-size: 0

    .spread-image-backing img
        max-width: 100%
    
    .spread-image-backing:first-child, .spread-image-backing:first-child .spread-image
        border-radius: 8px 8px 0 0

    .spread-image-backing.unrls::after
        position: absolute
        background-image: url(../images/unreleased-overlay.svg?v=1)
        background-size: cover
        height: 100%
        width: 100%
        top: 0
        left: 0
        content: ""

    .spread-gutter
        padding: 16px
    
    .gallery-card .below-fold
        overflow: hidden
        transition: max-height 200ms ease-in-out
        max-height: 500px

    .gallery-card.folded
        .kars-stack-header
            border: none
        .below-fold
            max-height: 0px

    @include media-breakpoint-down(md)
        .gallery-card.folded .kars-stack-header
            padding-top: 8px
            padding-bottom: 8px

